--- a/project/link-parser/pom.xml
+++ b/project/link-parser/pom.xml
@@ -12,6 +12,13 @@
 
     <artifactId>link-parser</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
-    
+
 </project>
