--- a/project/bot/pom.xml
+++ b/project/bot/pom.xml
@@ -48,6 +48,16 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.github.kilmajster</groupId>
+            <artifactId>ngrok-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
