--- a/project/pom.xml
+++ b/project/pom.xml
@@ -22,6 +22,8 @@
         <org.springdoc.webmvc-ui.version>2.0.2</org.springdoc.webmvc-ui.version>
         <org.telegram.telegrambots>6.5.0</org.telegram.telegrambots>
         <ngrok.version>0.7.0</ngrok.version>
+        <org.apache.maven.plugins.version>3.0.0</org.apache.maven.plugins.version>
+        <mockito.version>5.2.0</mockito.version>
     </properties>
 
     <dependencyManagement>
@@ -119,6 +121,13 @@
                 <version>${ngrok.version}</version>
             </dependency>
 
+            <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>${mockito.version}</version>
+            </dependency>
+
 
         </dependencies>
     </dependencyManagement>
@@ -159,6 +168,21 @@
                         <parameters>true</parameters>
                     </configuration>
                 </plugin>
+
+                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-failsafe-plugin -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>${org.apache.maven.plugins.version}</version>
+                </plugin>
+
+                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${org.apache.maven.plugins.version}</version>
+                </plugin>
+
             </plugins>
         </pluginManagement>
     </build>
