--- a/project/scrapper/src/main/resources/application.properties
+++ b/project/scrapper/src/main/resources/application.properties
@@ -2,4 +2,5 @@ app.test=electaBazz
 springdoc.swagger-ui.path=/swagger-ui
 git-hub-base-url=${GITHUB_API_URL:https://api.github.com/}
 stack-overflow-base-url=${STACKOVERFLOW_API_URL:https://api.stackexchange.com/2.0}
+telegram-bot-base-url=${TELEGRAM_BOT_URL:http://localhost:8080/}
 app.scheduler.interval=15000
