--- a/project/pom.xml
+++ b/project/pom.xml
@@ -171,6 +171,12 @@
                 <version>${spring-boot.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-jdbc</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+
 
         </dependencies>
     </dependencyManagement>
