--- a/project/scrapper/src/test/resources/application.properties
+++ b/project/scrapper/src/test/resources/application.properties
@@ -1,4 +1,16 @@
 spring.datasource.url=
 spring.datasource.username=
 spring.datasource.password=
+spring.datasource.driver-class-name=
 spring.liquibase.enabled=
+spring.liquibase.change-log=
+spring.liquibase.url=
+spring.liquibase.user=
+spring.liquibase.password=
+
+app.test=electaBazz
+springdoc.swagger-ui.path=/swagger-ui
+git-hub-base-url=${GITHUB_API_URL:https://api.github.com/}
+stack-overflow-base-url=${STACKOVERFLOW_API_URL:https://api.stackexchange.com/2.0}
+telegram-bot-base-url=${TELEGRAM_BOT_URL:http://localhost:8080/}
+app.scheduler.interval=15000
