--- a/project/bot/pom.xml
+++ b/project/bot/pom.xml
@@ -78,6 +78,11 @@
             <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
