lesson6 task1 add JDBC

--- a/project/scrapper/src/main/resources/application.properties
+++ b/project/scrapper/src/main/resources/application.properties
@@ -4,3 +4,7 @@ git-hub-base-url=${GITHUB_API_URL:https://api.github.com/}
 stack-overflow-base-url=${STACKOVERFLOW_API_URL:https://api.stackexchange.com/2.0}
 telegram-bot-base-url=${TELEGRAM_BOT_URL:http://localhost:8080/}
 app.scheduler.interval=120000
+spring.datasource.url=jdbc:postgresql://localhost:5432/scrapper
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
