--- a/project/scrapper/src/main/resources/application.properties
+++ b/project/scrapper/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 app.test=electaBazz
-springdoc.swagger-ui.path=/swagger-ui
-git-hub-base-url=${GITHUB_API_URL:https://api.github.com/}
-stack-overflow-base-url=${STACKOVERFLOW_API_URL:https://api.stackexchange.com/2.0}
-telegram-bot-base-url=${TELEGRAM_BOT_URL:http://localhost:8080/}
+app.database-access-type=jdbc
 app.scheduler.interval=120000
+stack-overflow-base-url=${STACKOVERFLOW_API_URL:https://api.stackexchange.com/2.0}
+git-hub-base-url=${GITHUB_API_URL:https://api.github.com/}
+telegram-bot-base-url=${TELEGRAM_BOT_URL:http://localhost:8080/}
+springdoc.swagger-ui.path=/swagger-ui
 spring.datasource.url=jdbc:postgresql://localhost:5432/scrapper
 spring.datasource.username=postgres
 spring.datasource.password=postgres
