--- a/project/scrapper-jooq/pom.xml
+++ b/project/scrapper-jooq/pom.xml
@@ -34,6 +34,11 @@
             <groupId>org.jooq</groupId>
             <artifactId>jooq-meta-extensions-liquibase</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+
 <!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.jooq/jooq-postgres-extensions &ndash;&gt;-->
 <!--        <dependency>-->
 <!--            <groupId>org.jooq</groupId>-->
