--- a/project/scrapper/src/main/resources/application.properties
+++ b/project/scrapper/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 app.test=electaBazz
 app.database-access-type=jdbc
 app.scheduler.interval=120000
+app.rabbit-configuration-parameters.queue-name=scrapperQueue
+app.rabbit-configuration-parameters.exchange-name=scrapperExchange
+app.rabbit-configuration-parameters.routing-key=scrapperRoutingKey
+app.use-queue=true
 
 stack-overflow-base-url=${STACKOVERFLOW_API_URL:https://api.stackexchange.com/2.0}
 git-hub-base-url=${GITHUB_API_URL:https://api.github.com/}
