--- a/project/bot/src/main/resources/application.properties
+++ b/project/bot/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 app.test=electaBazz
 app.telegramBotConfig.bot-name=TinkoffProjectPBaliabinBot
 app.telegramBotConfig.api-url=https://api.telegram.org/
-ngrok.enabled=true
+app.rabbit-configuration-parameters.queue-name=scrapperQueue
+app.rabbit-configuration-parameters.exchange-name=scrapperExchange
+app.rabbit-configuration-parameters.routing-key=scrapperRoutingKey
+
 scrapper-base-url=${SCRAPPER_CLIENT_URL:http://localhost:8081}
+
 springdoc.swagger-ui.path=/swagger-ui
+
+ngrok.enabled=true
