--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -16,8 +16,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Build scrapper
+      - name: checkout head
         uses: actions/checkout@hw1
+        
+      - name: build scrapper
         run: mvn package -pl scrapper -am -DskipTests
 
       - name: Build Docker scrapper container
