--- a/project/scrapper/src/main/resources/application.properties
+++ b/project/scrapper/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-app.test=electaBazz
+app.test=electaBuzz
 app.database-access-type=jdbc
 app.scheduler.interval=120000
 app.rabbit-configuration-parameters.queue-name=scrapperQueue
