--- a/project/bot/src/main/resources/application.properties
+++ b/project/bot/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-app.test=electaBazz
+app.test=electaBuzz
 app.telegramBotConfig.bot-name=TinkoffProjectPBaliabinBot
 app.telegramBotConfig.api-url=https://api.telegram.org/
 app.rabbit-configuration-parameters.queue-name=scrapperQueue
