--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout head
-        uses: actions/checkout@hw1
+        uses: actions/checkout@v3
         
       - name: build scrapper
         run: mvn package -pl scrapper -am -DskipTests
@@ -26,19 +26,19 @@ jobs:
         run: docker build -t pash7e7/tinkoffProjectScrapperImage .
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@hw1
+        uses: docker/login-action@v6
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@hw1
+        uses: docker/metadata-action@v6
         with:
           images: pash7e7/tinkoffProjectScrapperImage
 
       - name: Push Docker image
-        uses: docker/build-push-action@hw1
+        uses: docker/build-push-action@v6
         with:
           context: .
           push: true
