--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -18,6 +18,12 @@ jobs:
     steps:
       - name: checkout head
         uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.17
+          cache: maven
         
       - name: build bot
         run: mvn package -pl bot -am -DskipTests
@@ -26,19 +32,19 @@ jobs:
         run: docker build -t pash7e7/tinkoffProjectBotImage .
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@v6
+        uses: docker/login-action@v4
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@v6
+        uses: docker/metadata-action@v4
         with:
           images: pash7e7/tinkoffProjectBotImage
 
       - name: Push Docker image
-        uses: docker/build-push-action@v6
+        uses: docker/build-push-action@v4
         with:
           context: .
           push: true
