--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -14,6 +14,12 @@ jobs:
       - name: checkout head
         uses: actions/checkout@v3
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.17
+          cache: maven
+
       - name: check style bot
         run: mvn -pl bot -am checkstyle:check
 
