--- a/project/scrapper/src/test/resources/application.properties
+++ b/project/scrapper/src/test/resources/application.properties
@@ -1,4 +1,4 @@
-app.test=electaBazz
+app.test=electaBuzz
 app.scheduler.interval=15000
 app.database-access-type=jooq
 git-hub-base-url=${GITHUB_API_URL:https://api.github.com/}
