--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -14,19 +14,11 @@ jobs:
       - name: checkout head
         uses: actions/checkout@v3
 
-      - name: Set up a cache for Maven
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: 17
-          distribution: corretto
-          cache: maven
+          java-version: '17'
+          distribution: 'temurin'
 
       - name: check style bot
         run: mvn -pl bot -am checkstyle:check
