--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -19,22 +19,14 @@ jobs:
       - name: checkout head
         uses: actions/checkout@v3
 
-      - name: Set up a cache for Maven
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: 17
-          distribution: corretto
-          cache: maven
+          java-version: '17'
+          distribution: 'temurin'
         
       - name: build scrapper
-        run: mvn package -pl scrapper -am -DskipTests
+        run: mvn package -pl -am -DskipTests
 
       - name: Build Docker scrapper container
         run: docker build -t pash7e7/tinkoffProjectScrapperImage .
