--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -26,7 +26,7 @@ jobs:
           distribution: 'temurin'
         
       - name: build bot
-        run: mvn package -pl -am -DskipTests
+        run: mvn package -am -DskipTests
 
       - name: Build Docker bot container
         run: docker build -t pash7e7/tinkoffProjectBotImage .
