--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -26,7 +26,7 @@ jobs:
           distribution: 'temurin'
         
       - name: build scrapper
-        run: mvn package -pl -am -DskipTests
+        run: mvn package -pl scrapper -am -DskipTests -e
 
       - name: Build Docker scrapper container
         run: docker build -t pash7e7/tinkoffProjectScrapperImage .
