--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -21,7 +21,7 @@ jobs:
           distribution: 'temurin'
 
       - name: check style bot
-        run: mvn -pl bot -am checkstyle:check -e
+        run: mvn -e -pl bot -am checkstyle:check
 
       - name: check style scrapper
         run: mvn -pl scrapper -am checkstyle:check
