--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -25,11 +25,11 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: install bot
-        run: mvn install -pl bot -am -DskipTests -e
+      - name: install package
+        run: mvn install package -DskipTests
         
       - name: build bot
-        run: mvn package -am -DskipTests -e
+        run: mvn package -pl bot -am -DskipTests -e
 
       - name: Build Docker bot container
         run: docker build -t pash7e7/tinkoffProjectBotImage .
