--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -25,8 +25,8 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: install scrapper
-        run: mvn install -pl scrapper -am -DskipTests -e
+      - name: install package
+        run: mvn install package -DskipTests
         
       - name: build scrapper
         run: mvn package -pl scrapper -am -DskipTests -e
