--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -25,6 +25,9 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
+      - name: change directory
+        run: cd project
+
       - name: install package
         run: mvn install package -DskipTests
         
