--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -25,11 +25,8 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: change directory
-        run: cd project
-
       - name: install package
-        run: mvn install package -DskipTests
+        run: cd project && mvn install package -DskipTests
         
       - name: build scrapper
         run: mvn package -pl scrapper -am -DskipTests -X
