--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -29,7 +29,10 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-        
+      
+      - name: install bot
+        run: mvn install package -DskipTests
+
       - name: build bot
         run: mvn package -pl bot -am -DskipTests -e
 
