--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -54,8 +54,7 @@ jobs:
       - name: Push Docker image
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
-          context: .
-          file: ./project/bot/Dockerfile
+          context: ./prject/bot/
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
