--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -7,6 +7,11 @@ on:
     branches:
       - 'hw1'
 
+defaults:
+  run:
+    shell: bash
+    working-directory: project/
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -20,17 +25,12 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: install scrapper-jooq
-        working-directory: ./project/scrapper-jooq
-        run: mvn install package -DskipTests
-
       - name: generate classes
-        working-directory: ./project/scrapper-jooq
+        working-directory: ./scrapper-jooq
         run: mvn test
 
       - name: install package
-        run: cd project && mvn install package -DskipTests
-        with
+        run: mvn install package -DskipTests
 
       - name: check style bot
         run: mvn -pl bot -am checkstyle:check
