--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -64,7 +64,7 @@ jobs:
         with:
           images: | 
             pash7e7/tinkoff-project-scrapper-image
-            ghcr.io/tinkoff-project-scrapper-image
+            ghcr.io/${{ github.repository }}/tinkoff-project-scrapper-image
 
       - name: Push Docker image
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
